[B]v0.3.9 (7/7/2014)[/B]
-Fix timezones
-Removed pytz
(fixes by j0anita)

[B]v0.3.8 (4-07-2014):[/B]
-Simplified linux instalation (no more libs required). If you run the addon on linux (i386/x86_64) re-do the configuration again or the addon will not work.
-Dirty hack to avoid double sound on windows
-New settings layout
-Fixed rojadirecta url
-Proper addon.xml
-Other small fixes

[B]v0.3.7 (19-06-2014):[/B]
-New icon pack for general menus

[B]v0.3.6 (16-06-2014):[/B]
-New icon pack for wiziwig (tks axlt2002)
-A proper livefootballvideo.com parser
-Fixed livefootballaol list.

[B]v0.3.5 (15-06-2014):[/B]
-Fix empty listings for rojadirecta,AV and Arenamundial.

[B]v0.3.4 (13-06-2014):[/B]
-Added Arenavision mundial parser (temporary till the end of the competition)
-Added p2p links with no info to rojadirect parser
-Fixed urls like futbolsinlimites (iframe hidden sop://) in rojadirecta
-Fixed a minor issue in sopcast ucoz

[B]v0.3.3 (12-06-2014):[/B]
-Fix arenavision/ arenavision schedule
-Fix Rojadirecta parser
-Added world cup 2014 section to wiziwig parser

[B]v0.3.2 (6-06-2014):[/B]
-Fix load_local_torrents for windows (tks azirus)

[B]v0.3.1 (5-06-2014):[/B]
-Added support for local .torrent files (+menu entry)

[B]v0.3.0 (1-06-2014):[/B]
-Fix issue with strings missing on devices not eligible to change acestreamengine settings from addon gui.

[B]v0.2.9 (21-05-2014):[/B]
-Added openelec i386/i686 package
-Small fixes
-Different dialogprogress for sopcast

[B]v0.2.8 (20-05-2014):[/B]
-Added xbian armv7 package (thanks to xbian devs)
-Added openelec armv7 package
-Acestream settings are now separated from the engine (txt files), openssl was also updated. This applies to the raspberry pi, mac osx and linux armv7. If you run the addon in one of those platforms, please re-do the configuration.
-It's now possible to change the engine settings from the advanced functions menu for the platforms listed above (re-do the configuration to get the new engine)